# Banco-de-series-Netflix

./: CMakeLists.txt  README.md  main.c
Lista/: lista.c  lista.h
Serie/: relatorio.c  relatorio.h  serie.c  serie.h
Usuario/: usuario.c  usuario.h
